--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -159,11 +159,8 @@ circular velocity $V_{c}$ of $50$\kms.
 
 We use DM halo catalogs constructed using the Bound Density Maxima (BDM)
 algorithm \citep{BDM,BDMb}. To define the radius of a halo we use a
-density threshold of 360 times the mean density of the Universe (
-200 times the critical density), for different redshifts we use the
-overdensity criterion by \cite{Bryan1998}. An important feature of BDM
-is that it allows us to detect sub-halos inside larger virialized
-structures.  
+density threshold of 360 times the mean density of the Universe. An important feature of BDM is that it allows us to detect sub-halos inside larger virialized
+structures.   
 
 All the raw data used in this Letter is available through the Multidark database \footnote{\texttt{www.multidark.org}}
 \citep{Riebe2013}.  Furthermore, in order to facilitate the
@@ -193,7 +190,6 @@ $z=0.0, 0.25, 0.5$ and $1.0$.  The number of pairs at each redshift in
 each population is listed on the first arrow of Table
 \ref{table:numbers}. 
 
-\ref{table:numbers}.  
 
 
 \section{Bullet Geometry and Measurement Setup}
