--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -34,7 +34,7 @@
 
 \title{The abundance of Bullet-Groups in $\Lambda$CDM}
 \author{J. G. Fern\'andez-Trincado$^{1,2,3}$, J. E. Forero-Romero$^1$,
-  T. Verdugo$^3$, G. Foex$^4$ and V. Motta$^4$} 
+  G.Foex$^4$, T. Verdugo$^3$ and V. Motta$^4$} 
 \affil{$^1$ Departamento de F\'{i}sica, Universidad de los Andes,
   Cra. 1 No. 18A-10, Edificio Ip, Bogot\'a, Colombia\\ 
        $^2$ Institute Utinam, CNRS UMR6213, Universit\'e de
@@ -101,7 +101,7 @@ DLSCL J0916.2+2951 \citep{Dawson2012}, ZwCl 1234.0+02916
 \citep{Dahle2013}. Recently \citep{Gastaldello} observed a DM-baryon
 displacement of $87\pm 14$\hkpc and a DM-DM separation of $186\pm
 30$\hkpc in \bullg, a group-like system with a total
-mass $2.4\pm 0.6 \times 10^{14}$\Msun found in the the Strong Lensing
+mass $2.4\pm 0.6 \times 10^{14}\Msun$ found in the the Strong Lensing
 Legacy Survey (SL2S) sample \citep{Cabanac2007,More2012}.
 
 
@@ -118,7 +118,7 @@ displacements of Bullets has been performed for clusters
 \citep{ForeroRomero2010} but not for lower mass systems.
 
 In this Letter we extend such study for systems in the group mass
-scale. We measure the abundance of DM systems with with a multi-modal
+scale. We measure the abundance of DM systems with a multi-modal
 morphology (large DM-DM displacements) and estimate the amount of
 systems with a Bullet configuration  (large DM-baryon
 displacements). To this end we use a high resolution N-body
@@ -159,8 +159,9 @@ circular velocity $V_{c}$ of $50$\kms.
 
 We use DM halo catalogs constructed using the Bound Density Maxima (BDM)
 algorithm \citep{BDM,BDMb}. To define the radius of a halo we use a
-density threshold of 360 times the mean density of the Universe. An important feature of BDM is that it allows us to detect sub-halos inside larger virialized
-structures.   
+density threshold of 360 times the mean density of the Universe. An
+important feature of BDM is that it allows us to detect sub-halos
+inside larger virialized structures.     
 
 All the raw data used in this Letter is available through the Multidark database \footnote{\texttt{www.multidark.org}}
 \citep{Riebe2013}.  Furthermore, in order to facilitate the
@@ -187,8 +188,7 @@ Finally, we split the sample into two  populations; groups with
 $300\kms < V_{\rm c, host}<700\kms$ and clusters with $V_{\rm
   c,host}>700\kms$. These two samples are constructed at four redshifts:
 $z=0.0, 0.25, 0.5$ and $1.0$.  The number of pairs at each redshift in
-each population is listed on the first arrow of Table
-\ref{table:numbers}. 
+each population is listed on the first row of Table \ref{table:numbers}. 
 
 
 
@@ -319,13 +319,13 @@ at the end of Section \ref{sec:geometry} assuming that the sub-halo
 merges (or falls below the BDM detection threshold) right at its
 second pass through the center of the host halo \citep{Poole2006}.  
 
-The first region has $\mu\approx-1$ and $D_{\rm off}>0.6$, which
+The first region has $\mu\sim-1$ and $D_{\rm off}>0.6$, which
 locates the systems where a head-on collision has just started. The
-second region has $\mu\approx 1$ and $D_{\rm off}<0.6$; at this stage
+second region has $\mu\sim 1$ and $D_{\rm off}<0.6$; at this stage
 the collision continues after the first crossing of the host's center,
 the low number of halos with radial infalling velocities and
 displacements $D_{\rm off}>0.6$ suggest that this the maximum range of
-radii for the apogee.  The third region corresponds to $\mu\approx-1$
+radii for the apogee.  The third region corresponds to $\mu\sim-1$
 and $D_{\rm off}<0.6$ that is the the secondary infall after apogee.  
 
 In the next subsection we use the information in this sequence to
@@ -347,16 +347,15 @@ This estimate is based on the different kinds of trajectories and
 collision stages described in previous sections. To start with, we
 consider that systems with $|\mu|<0.9$, describing grazing
 trajectories, have a baryonic displacement equal to zero.  In systems
-with head-on collissions, $|\mu|>0.9$, we distinguish two different
-cases. The first one, systems with  $\mu<-0.9$ and large displacements $D_{\rm
-  off}>0.6$ most probably describe the beginning of the interaction
-and should have baryonic displacements equal to zero.
-In all the other cases, the DM-baryon displacement
-should be equal to zero. We approximate this displacement by  $d_{\rm
+with head-on collissions, $|\mu|>0.9$, we distinguish ystems with
+$\mu<-0.9$ and large displacements $D_{\rm   off}>0.6$ most probably
+describe the beginning of the interaction and should have baryonic
+displacements equal to zero. In all the other cases, the DM-baryon displacement
+should be different from zero. We approximate this displacement by  $d_{\rm
   2D}^{\rm bar} = X_{\rm off} R_{\rm   vir}$, where $X_{\rm   off}$ is
 the offset computed between the minium of potential and the center of
 mass for each host halo computed from all the matter inside the virial
-radius.  
+radius.   
 
 
 This simplified model does not take into account that there is a
@@ -415,7 +414,7 @@ last row indicates the number of objects in the previous sub-sample
 with DM-baryon displacements $d_{\rm 2D}^{\rm bar}>87$\hkpc. 
 
 Considering that the statistics for the cluster sample are dominated
-by objects in the mass range of the \bullg we make a comparison
+by objects in the mass range of the \bullg\ we make a comparison
 against this sample. Table \ref{table:numbers} shows that $\sim 40\%$ of the 
 clusters are expected to have large DM-DM displacements, this is a
 factor of $\sim 2$ larger than the observational estimate by
@@ -429,15 +428,16 @@ This rough comparison  shows that our estimates for the relative number of
 bullet systems (large DM-baryon displacements) with respect to
 multi-modal systems (large DM-DM displacements) is compatible with
 observations. A proper comparison must take into account all the observational
-uncertainties, biases, mixes between our two populations (groups \&
+uncertainties, biases and mixes between our two populations (groups \&
 clusters at different redshifts) to derive a stronger bound from
 the simulation, something that is beyond the scope of this Letter.   
 
-Neverthless, comparing the number for group and cluster samples in the
-last row of Table \ref{table:numbers} we can already predict that a
-fixed redshift the number density of halos in the groups sample similar to \bullg is
-$\sim 6.0\times 10^{-7}$ Mpc$^{-3}$, three times larger than the
-estimate for halos in the group sample.
+Nevertheless, comparing the absolute number of systems with
+characteristics similar to \bullg\ in the group sample
+(last row of Table \ref{table:numbers}) we predict that its number
+density is $\sim 6.0\times 10^{-7}$ Mpc$^{-3}$, three times larger
+than the expected number density of \bullg\ systems in the cluster
+sample. 
 
 
 
