bullet reference updatef

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -2604,10 +2604,13 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+F. Gastaldello1,2⋆, M. Limousin3,4, G. F ̈oex5, R. P. Mun ̃oz6, T. Verdugo7, V. Motta5,
+A. More8,9, R. Cabanac10, D. A. Buote2, D. Eckert11,1, S. Ettori12,13, A. Fritz1,
+S. Ghizzardi1, P. J. Humphrey2, M. Meneghetti12,13,14, M. Rossetti15,1
 @ARTICLE{Gastaldello,
-   author = {{Gastaldello}, F. and {Limousin}, M. and {Foex}, G.},
-    title = "{Dark matter-baryons separation at the lowest mass scale: the Bullet Group}",
-  journal = {\mnras\ submitted},
+   author = {{Gastaldello}, F. and {Limousin}, M. and {Foex}, G. and {Mu\~noz}, R.P. and {Verdugo}, T. and {Motta}, V. and {More}, A. and {Cabanac}, R. and {Buote}, D.A. and {Eckert}, D. and {Ettori}, S. and {Fritz}, A. and {Ghizzardi}, S. and {Humphrey}, P.J. and {Meneghetti}, M. and {Rossetti} M.},
+    title = "{Dark matter-baryons separation at the lowest mass scale: the Bullet Group}", 
+  journal = {\mnras\ accepted},
      year = 2014
 }
 
