comments from Gael

--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -70,8 +70,8 @@ $(7\pm 3)\%$, consistent with previous studies of dark matter to
 baryon separations. Considering both constraints on the DM-DM and
 DM-baryon displacements we find that the number density of groups
 similar to \bullg\ is $\sim 6.0\times 10^{-7}$ Mpc$^{-3}$, three times
-larger than the estimated value forclusters. These results open up
-the possibility for a new statistical test of $\Lambda$CDM.     
+larger than the estimated value for clusters. These results open up
+the possibility for a new statistical test of $\Lambda$CDM.
 \end{abstract}
 
 \keywords{dark matter --- galaxies: clusters: individual (SL2S
@@ -120,7 +120,7 @@ displacements of Bullets has been performed for clusters
 In this Letter we extend such study for systems in the group mass
 scale. We measure the abundance of DM systems with a multi-modal
 morphology (large DM-DM displacements) and estimate the amount of
-systems with a Bullet configuration  (large DM-baryon
+systems with a Bullet-like configuration  (large DM-baryon
 displacements). To this end we use a high resolution N-body
 cosmological simulation (Bolshoi) that allows us to find  multi-modal
 dark matter distributions in hosts with circular velocities larger
@@ -163,7 +163,7 @@ density threshold of 360 times the mean density of the Universe. An
 important feature of BDM is that it allows us to detect sub-halos
 inside larger virialized structures.     
 
-All the raw data used in this Letter is available through the Multidark database \footnote{\texttt{www.multidark.org}}
+All the raw data used in this Letter are available through the Multidark database \footnote{\texttt{www.multidark.org}}
 \citep{Riebe2013}.  Furthermore, in order to facilitate the
 reproducibility and reuse of our results we have made available all
 the data and the source code available in a public
@@ -186,9 +186,10 @@ dark matter clump in the merging cluster, i.e. the bullets.
 
 Finally, we split the sample into two  populations; groups with
 $300\kms < V_{\rm c, host}<700\kms$ and clusters with $V_{\rm
-  c,host}>700\kms$. These two samples are constructed at four redshifts:
-$z=0.0, 0.25, 0.5$ and $1.0$.  The number of pairs at each redshift in
-each population is listed on the first row of Table \ref{table:numbers}. 
+  c,host}>700\kms$ ($\geq 8.0\times 10^{13}$\hMsun). These two samples
+are constructed at four redshifts: $z=0.0, 0.25, 0.5$ and $1.0$.  The
+number of pairs at each redshift in each population is listed on the
+first row of Table \ref{table:numbers}.  
 
 
 
@@ -216,18 +217,18 @@ $|\mu|\sim 1$ can be considered as head-on collisions while
 $|\mu|< 0.9$ describes a grazing trajectory.  
 
 The geometrical configuration can be further described by the
-following quantities. The circular velocity of each component, $V_{\rm
-  c,host}$ for the host and $V_{\rm c, sub}$ for the sub-halo and the
+following quantities. The circular velocity of each component and the
 size of the host halo $R_{\rm vir}$. Another useful quantity computed
 in the simulation is the distance between the minimum of potential for
 the host halo and its center of mass (computed from all the particles
-inside the $R_{\rm vir}$), $X_{\rm off}=||\vec{r}_{min}-\vec{r}_{cm}||/R_{\rm vir}$, which serves as a
-measurement of how much the host halo is perturbed. 
+inside the $R_{\rm vir}$), $X_{\rm
+  off}=||\vec{r}_{min}-\vec{r}_{cm}||/R_{\rm vir}$, which serves as a measurement of how much the host halo is perturbed. 
 
 In this letter we work with two quantities that could be inferred
 from observations of Bullet-like systems. The projected distance
 between two dominant DM clumps, $d_{\rm 2D}$ and the projected distance
-between the DM-baryonic clumps, $d_{\rm 2D}^{\rm bar}$.
+between the DM and the dominand baryonic clumps (in the case of
+clusters this corresponds to the gas), $d_{\rm 2D}^{\rm bar}$.
 
 From the simulation point of view, the first quantity can be
 translated into the 2D projected values of $||\vec{r}||$ and its value
@@ -345,14 +346,14 @@ from the available information.
 
 This estimate is based on the different kinds of trajectories and
 collision stages described in previous sections. To start with, we
-consider that systems with $|\mu|<0.9$, describing grazing
-trajectories, have a baryonic displacement equal to zero.  In systems
-with head-on collissions, $|\mu|>0.9$, we distinguish ystems with
-$\mu<-0.9$ and large displacements $D_{\rm   off}>0.6$ most probably
-describe the beginning of the interaction and should have baryonic
-displacements equal to zero. In all the other cases, the DM-baryon displacement
-should be different from zero. We approximate this displacement by  $d_{\rm
-  2D}^{\rm bar} = X_{\rm off} R_{\rm   vir}$, where $X_{\rm   off}$ is
+consider that systems with $|\mu|<0.9$ describing grazing
+trajectories have a baryonic displacement equal to zero.  In systems
+with head-on collissions, $|\mu|>0.9$ the systems with $\mu<-0.9$ and
+large displacements $D_{\rm   off}>0.6$ most probably describe the
+beginning of the interaction and should have baryonic displacements
+equal to zero. In all other cases the DM-baryon displacement
+should be different from zero. We approximate this displacement by
+$d_{\rm   2D}^{\rm bar} = X_{\rm off} R_{\rm   vir}$, where $X_{\rm   off}$ is
 the offset computed between the minium of potential and the center of
 mass for each host halo computed from all the matter inside the virial
 radius.   
@@ -367,7 +368,7 @@ Letter. Instead we caution the reader that the derived fraction of
 halos with a displacement $<d_{2D}^{\rm bar}$ must be considered as an
 upper limit. 
 
-The results for the integrated distributions for $>d_{\rm 2D}^{\rm bar}$
+The results for the integrated distributions for $d_{\rm 2D}^{\rm bar}$
 are shown in Figure \ref{fig:baryonic_displacements}. The dashed lines
 represented the results for groups and the continuous lines correspond
 to clusters. As a test of our model we compare the cluster results
@@ -481,29 +482,29 @@ $64 <d_{\rm 2D}/\hkpc< 350$ & 6188 & 6422 & 6635 & 6933 & 151 &
 \section{Conclusions}
 \label{sec:conclusions}
 
-In this Letter we estimate the fraction of galaxy groups and clusters
+In this Letter we estimated the fraction of galaxy groups and clusters
 in a $\Lambda$CDM cosmology that could present observational features
 associated to a bullet-like event. This is motivated by the recent
 observational results of \citep{Gastaldello} where a system (\bullg)
 on the mass range $1\times 10^{14}$\hMsun\ and velocity dispersion
 $650$\kms was reported to feature a displacement between its baryonic
-(hot gas) and dark matter components. 
+(gas) and dark matter components. 
 
-We compute the distribution of projected displacements
+We computed the distribution of projected displacements
 between the dominant DM clumps in two kinds of systems; groups with
 circular velocities $300\kms<V_{\rm c}<700\kms$ ($1.0\times
-10^{13}\hMsun < M_{\rm vir}<1.0\times 10^{14}\hMsun$) and clusters with $V_{\rm
-  c}>700$\kms ($M_{\rm vir}>1.0\times 10^{14}\hMsun$). We report these
-results at four different redshifts $z=0.0,0.25,0.5$ and $10$. Our
+10^{13}\hMsun < M_{\rm vir}<8.0\times 10^{13}\hMsun$) and clusters with $V_{\rm
+  c}>700$\kms ($M_{\rm vir}>8.0\times 10^{13}\hMsun$). We reported these
+results at four different redshifts $z=0.0,0.25,0.5$ and $1$. Our
 results are based on large DM-only N-body cosmological simulation with
-a resolution that allows to study for the first time Bullet-like
+a resolution that allows us to study for the first time Bullet-like
 configurations in the mass range of galaxy groups. 
 
 Our main result is that a fraction of $40\%$-$60\%$ of the halos
-in the group sample present DM-DM displacement equal or larger than the
+in the group sample presents DM-DM displacement equal or larger than the
 observed displacement for \bullg. For halos in the cluster sample this
-fraction increases to $60\%$-$80\%$. We also derive an
-estimate for the DM-baryon displacement In the group sample
+fraction increases to $60\%$-$80\%$. We also derived an
+estimate for the DM-baryon displacement. In the group sample
 $0.1\%$-$1.0\%$ of the halos show a displacement equal or larger than
 the  measurements of \bullg\ by \citep{Gastaldello}; in the cluster
 sample this fraction rises to $4\%$-$10\%$. 
@@ -516,13 +517,15 @@ a rough comparison using the observational criteria \citep{Foex2013,
 multi-modal systems (large DM-DM displacements) is consistent with
 observations; both are in the range $\sim 7\%$. 
 
-In terms of absolute numer densities, we expect to have $\sim 6.0\times
+In terms of absolute number densities, we expect to have $\sim 6.0\times
 10^{-7}$ Mpc$^{-3}$ groups similar to \bullg; three times the expected
 value for clusters. This opens up a new observational possibility with surveys
 such as SL2S that target a large number of groups and estimate its
 multi-modal nature from lensing analysis \citep{Foex2013}. An approach
 that can be further exploited with upcoming lensing surveys (e.g. with
-the {\it Euclid} satellite). 
+the {\it Euclid} satellite) and pushes for X-ray surveys with higher
+sensibility: chances are larger to find bullets in systems with lower
+X-ray luminosities.
 
 The CosmoSim database used in this paper is a service by the
 Leibniz-Institute for Astrophysics Potsdam (AIP). The  Bolshoi
@@ -533,6 +536,8 @@ was run at the NASA Ames Research Center.
 J.E.F-R acknowledges support from Vicerrector\'ia de
 Investigaciones through a FAPA starting grant.
 
+G.F. acknowledges support from FONDECYT through grant 3120160.
+
 T.V. acknowledges support from CONACYT through grant 165365 and
 203489 through the program Estancias posdoctorales y sab\'aticas al
 extranjero para la consolidaci\'on de grupos de investigaci\'on.  
@@ -540,7 +545,10 @@ extranjero para la consolidaci\'on de grupos de investigaci\'on.
 V.M. gratefully acknowledges FONDECYT support through grant 1120741
 and ECOS/CONICYT through grant C12U02. 
 
+
+
 \bibliographystyle{apj}
 \bibliography{references} 
+
 
 \end{document}
