--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -71,7 +71,8 @@ baryon separations. Considering both constraints on the DM-DM and
 DM-baryon displacements we find that the number density of groups
 similar to \bullg\ is $\sim 6.0\times 10^{-7}$ Mpc$^{-3}$, three times
 larger than the estimated value for clusters. These results open up
-the possibility for a new statistical test of $\Lambda$CDM.
+the possibility for a new statistical test of $\Lambda$CDM by looking
+for interacting features in low mass clusters and groups. 
 \end{abstract}
 
 \keywords{dark matter --- galaxies: clusters: individual (SL2S
